@@ -1,0 +1,16 @@
+#!/usr/bin/env xdg-open
+
+[Desktop Entry]
+Version=1.0
+Type=Application
+Terminal=false
+Name[el_GR]=TkBackup
+Exec=/usr/local/bin/tkbak
+Icon=/usr/share/icons/hicolor/48x48/apps/tkbackup.png
+Comment[el_GR]=Εφαρμογή για την δημιουργία και συμπίεση εφεδρικών αντιγράφων.
+Comment=Application for zip and archive files and directories.
+Name=TkBackup
+GenericName[el_GR]=TkBackup
+Categories=Utility
+Terminal=false
+StartupNotify=false
